Ateração realizada Formulário de cadastro

--- a/CadastroUsuarios/src/main/webapp/cadastro.xhtml
+++ b/CadastroUsuarios/src/main/webapp/cadastro.xhtml
@@ -10,6 +10,9 @@
 </h:head>
 
 <h:body>
+<!-- Formulário de cadastro -->
+<h1>Cadastro de usuário</h1>
+<h:form id="cadastro
     <h:form>
         <h:outputLabel for="nome">Nome:</h:outputLabel>
         <h:inputText id="nome" value="#{pessoa.nome}" />
